[package]
name = "bsread"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "libbitshuffle"

[build-dependencies]
cc = "1.2.1"

[dependencies]
zmq = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
indexmap = "1.9"
log = "0.4.22"
lz4 = "1.24"
cc = "1.2.1"
num = "0.4.3"
num-traits = "0.2.19"

