[package]
name = "bsread"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Gobbo <alexandre.gobbo@psi.ch>"]
description = "Rust implementation of the BSREAD streaming protocol"
license = "GPL"
repository = "https://github.com/paulscherrerinstitute/bsread_rust"
homepage = "https://www.psi.ch" #
categories = ["network-programming"]
build = "build.rs"
links = "libbitshuffle"

[build-dependencies]
cc = "1.2.1"

[dependencies]
zmq = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
indexmap = "1.9"
log = "0.4.22"
lz4 = "1.24"
cc = "1.2.1"
num = "0.4.3"
num-traits = "0.2.19"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rand = "0.8"
md-5 = "0.10"

